java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField2-hints.pass
Create Local Variable test
Create Field test in org.netbeans.test.java.hints.CreateField2
Create Parameter test
